<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:background="@null"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_forgot_password"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:padding="5dp"
                android:src="@drawable/medilogo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16ssp"/>



            <EditText
                android:id="@+id/edtpopupForgotEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/rounded_border_lightnaviblue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_forgot_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_button_blue"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="@color/White"
                    />

                <TextView
                    android:id="@+id/btn_login_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New User?  Sign Up"
                    android:background="@null"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="15dp"
                    android:textSize="@dimen/_12ssp"
                    />

                <TextView
                    android:id="@+id/btn_backtologin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back_to_login"
                    android:background="@null"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="7dp"
                    android:textSize="@dimen/_12ssp"
                    />
            </LinearLayout>
            <!---add your views here-->
        </LinearLayout>

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_gravity="top|right"
            android:clickable="true"
            android:tint="@color/colorPrimary"
            android:background="@drawable/shape_circle_white"
            android:src="@drawable/ic_close_popup"
            tools:ignore="UseAppTint" />
    </FrameLayout>

</LinearLayout>