<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".OurDoctorActivity">

    <LinearLayout
        android:id="@+id/layout_searchdoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <Button
            android:id="@+id/tv_showhidefilter"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/view_rounded_white_corner"
            android:text="@string/hint_hidefilter"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorPrimary" />

        />

        <LinearLayout
            android:id="@+id/filterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/hint_select_speciality"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/spn_speciality"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="0.7"
                android:background="@drawable/spinner_background"
                android:ellipsize="middle"
                android:gravity="center_vertical"
                android:hint="Select Specialty/Organization"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hint_language"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/spn_language"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="0.7"
                android:background="@drawable/spinner_background"
                android:ellipsize="middle"
                android:gravity="center_vertical"
                android:hint="Select Language"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textSize="@dimen/_10ssp" />

            <Button
                android:id="@+id/searchDoctor"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/view_rounded_white_corner"
                android:text="@string/hint_search"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_add_doctor_coupons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/view_rounded_white_corner"
        android:text="Add Coupons"
        android:textColor="@color/colorPrimary" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_adddoctorcouponslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_add_doctor_coupons"
        android:layout_below="@id/layout_searchdoctor"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp" />

    <TextView
        android:id="@+id/nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_add_doctor_coupons"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:text=""
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>